--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+#root, body, html {
+  height: 100%;
+}
+
 .App {
   text-align: center;
 }
